@@ -2,9 +2,9 @@ package io.dazzleduck.sql.logger.tailing;
 
 import io.dazzleduck.sql.client.HttpArrowProducer;
 import io.dazzleduck.sql.commons.ConnectionPool;
+import io.dazzleduck.sql.runtime.SharedTestServer;
 import org.apache.arrow.vector.types.pojo.Schema;
 import org.junit.jupiter.api.*;
-import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.io.TempDir;
 
 import java.nio.file.Files;
@@ -21,27 +21,31 @@ import static org.junit.jupiter.api.Assertions.*;
 @Execution(ExecutionMode.CONCURRENT)
 class LogTailToArrowProcessorTest {
 
-    static final int PORT = 8094;
-    static Schema schema;
+    private static SharedTestServer server;
+    private static String ingestionPath;
+    private static String baseUrl;
+    private static Schema schema;
 
-    @TempDir
-    static Path warehouse;
     @TempDir
     Path tempDir;
 
     @BeforeAll
     static void setup() throws Exception {
-        String warehousePath = warehouse.toAbsolutePath().toString().replace("\\", "\\\\");
-        io.dazzleduck.sql.runtime.Main.main(new String[]{
-                "--conf", "dazzleduck_server.http.port=" + PORT,
-                "--conf", "dazzleduck_server.http.auth=jwt",
-                "--conf", "dazzleduck_server.warehouse=\"" + warehousePath + "\"",
-                "--conf", "dazzleduck_server.ingestion.max_delay_ms=500"
-        });
+        server = new SharedTestServer();
+        server.start("ingestion.max_delay_ms=500");
+        ingestionPath = server.getIngestionPath();
+        baseUrl = server.getHttpBaseUrl();
 
-        JsonToArrowConverter converter = new JsonToArrowConverter();;
+        JsonToArrowConverter converter = new JsonToArrowConverter();
         schema = converter.getSchema();
         converter.close();
+    }
+
+    @AfterAll
+    static void teardown() {
+        if (server != null) {
+            server.close();
+        }
     }
 
     @BeforeEach
@@ -60,17 +64,17 @@ class LogTailToArrowProcessorTest {
         // targetDir where dd_uuid.parquet will be created
         String targetDir = "withSingleFileDir";
         // because target directory must exist
-        Files.createDirectories(Path.of(warehouse.toString(), targetDir));
+        Files.createDirectories(Path.of(ingestionPath, targetDir));
         // Generating 1 file with 2 logs
         runLogGenerator(tempDir, "1", "2");
         // Create REAL HttpSender
-        try (HttpArrowProducer sender = new HttpArrowProducer(schema, "http://localhost:" + PORT, "admin", "admin", targetDir, Duration.ofSeconds(5), 1, 2048, Duration.ofMillis(200), 3, 1000, java.util.List.of(), java.util.List.of(), 10_000_000, 10_000_000)) {
+        try (HttpArrowProducer sender = new HttpArrowProducer(schema, baseUrl, "admin", "admin", targetDir, Duration.ofSeconds(5), 1, 2048, Duration.ofMillis(200), 3, 1000, java.util.List.of(), java.util.List.of(), 10_000_000, 10_000_000)) {
             JsonToArrowConverter converter = new JsonToArrowConverter();
             LogTailToArrowProcessor processor = new LogTailToArrowProcessor(tempDir.toString(), "*.log", converter, sender, 100);
             processor.start();
             // Verify ingestion via DuckDB
             await().ignoreExceptions().untilAsserted(() -> {
-                long count = ConnectionPool.collectFirst("select count(*) from read_parquet('%s/%s/*.parquet')".formatted(warehouse, targetDir), Long.class);
+                long count = ConnectionPool.collectFirst(String.format("select count(*) from read_parquet('%s/%s/*.parquet')", ingestionPath, targetDir), Long.class);
                 assertEquals(2, count);
             });
             processor.close();
@@ -80,17 +84,17 @@ class LogTailToArrowProcessorTest {
     @Test
     void withMultipleFiles_endToEndTest() throws Exception {
         String targetDir = "withMultipleFileDir";
-        Files.createDirectories(Path.of(warehouse.toString(), targetDir));
+        Files.createDirectories(Path.of(ingestionPath, targetDir));
         // Generating 3 file with 2 logs per file: total = 6 logs
         runLogGenerator(tempDir, "3", "2");
-        try (HttpArrowProducer sender = new HttpArrowProducer(schema, "http://localhost:" + PORT, "admin", "admin", targetDir, Duration.ofSeconds(5), 1,  2048, Duration.ofMillis(200), 3, 1000, java.util.List.of(), java.util.List.of(), 10_000_000, 10_000_000)) {
+        try (HttpArrowProducer sender = new HttpArrowProducer(schema, baseUrl, "admin", "admin", targetDir, Duration.ofSeconds(5), 1,  2048, Duration.ofMillis(200), 3, 1000, java.util.List.of(), java.util.List.of(), 10_000_000, 10_000_000)) {
             // Start processor
             JsonToArrowConverter converter = new JsonToArrowConverter();
             LogTailToArrowProcessor processor = new LogTailToArrowProcessor(tempDir.toString(), "*.log", converter, sender, 100);
             processor.start();
             // Verify ingestion via DuckDB
             await().ignoreExceptions().untilAsserted(() -> {
-                long count = ConnectionPool.collectFirst("select count(*) from read_parquet('%s/%s/*.parquet')".formatted(warehouse, targetDir), Long.class);
+                long count = ConnectionPool.collectFirst(String.format("select count(*) from read_parquet('%s/%s/*.parquet')", ingestionPath, targetDir), Long.class);
                 assertEquals(6, count);
             });
             processor.close();
@@ -100,19 +104,19 @@ class LogTailToArrowProcessorTest {
     @Test
     void invalidJsonLines_areSkipped_andNotIngested() throws Exception {
         String targetDir = "invalidJsonLinesDir";
-        Files.createDirectories(Path.of(warehouse.toString(), targetDir));
+        Files.createDirectories(Path.of(ingestionPath, targetDir));
         Path logFile = tempDir.resolve("bad.log");
         // one invalid JSON in log file
         Files.writeString(logFile, "{this is not json}\n");
         // two correct logs in logFile
         runLogGeneratorWithFile(logFile);
         runLogGeneratorWithFile(logFile);
-        try (HttpArrowProducer sender = new HttpArrowProducer(schema, "http://localhost:" + PORT, "admin", "admin", targetDir, Duration.ofSeconds(5), 1,  2048, Duration.ofMillis(200), 3, 1000, java.util.List.of(), java.util.List.of(), 10_000_000, 10_000_000)) {
+        try (HttpArrowProducer sender = new HttpArrowProducer(schema, baseUrl, "admin", "admin", targetDir, Duration.ofSeconds(5), 1,  2048, Duration.ofMillis(200), 3, 1000, java.util.List.of(), java.util.List.of(), 10_000_000, 10_000_000)) {
             JsonToArrowConverter converter = new JsonToArrowConverter();
             LogTailToArrowProcessor processor = new LogTailToArrowProcessor(tempDir.toString(), "*.log", converter, sender, 100);
             processor.start();
             await().ignoreExceptions().untilAsserted(() -> {
-                long count = ConnectionPool.collectFirst("select count(*) from read_parquet('%s/%s/*.parquet')".formatted(warehouse, targetDir), Long.class);
+                long count = ConnectionPool.collectFirst(String.format("select count(*) from read_parquet('%s/%s/*.parquet')", ingestionPath, targetDir), Long.class);
                 // Only 2 valid JSON rows should be ingested
                 assertEquals(2, count);
             });
@@ -123,17 +127,17 @@ class LogTailToArrowProcessorTest {
     @Test
     void emptyLogFile_doesNotCreateParquet() throws Exception {
         String targetDir = "emptyLogFileDir";
-        Files.createDirectories(Path.of(warehouse.toString(), targetDir));
+        Files.createDirectories(Path.of(ingestionPath, targetDir));
         Path logFile = tempDir.resolve("empty.log");
         Files.createFile(logFile);
 
-        try (HttpArrowProducer sender = new HttpArrowProducer(schema, "http://localhost:" + PORT, "admin", "admin", targetDir, Duration.ofSeconds(3), 1, 2048, Duration.ofMillis(200), 3, 1000, java.util.List.of(), java.util.List.of(), 10_000_000, 10_000_000)) {
+        try (HttpArrowProducer sender = new HttpArrowProducer(schema, baseUrl, "admin", "admin", targetDir, Duration.ofSeconds(3), 1, 2048, Duration.ofMillis(200), 3, 1000, java.util.List.of(), java.util.List.of(), 10_000_000, 10_000_000)) {
             JsonToArrowConverter converter = new JsonToArrowConverter();
             LogTailToArrowProcessor processor = new LogTailToArrowProcessor(tempDir.toString(), "*.log", converter, sender, 100);
             processor.start();
             // Wait briefly and assert file does NOT exist
             await().during(1, TimeUnit.SECONDS).untilAsserted(() -> {
-                assertThrows(Exception.class, () -> ConnectionPool.collectFirst("select count(*) from read_parquet('%s/%s/*.parquet')".formatted(warehouse, targetDir), Long.class));
+                assertThrows(Exception.class, () -> ConnectionPool.collectFirst(String.format("select count(*) from read_parquet('%s/%s/*.parquet')", ingestionPath, targetDir), Long.class));
             });
             processor.close();
         }
@@ -142,10 +146,10 @@ class LogTailToArrowProcessorTest {
     @Test
     void missingLogFile_doesNotCrashProcessor() throws Exception {
         String targetDir = "missingLogFileDir";
-        Files.createDirectories(Path.of(warehouse.toString(), targetDir));
+        Files.createDirectories(Path.of(ingestionPath, targetDir));
         tempDir.resolve("missing.log"); // not created
 
-        try (HttpArrowProducer sender = new HttpArrowProducer(schema, "http://localhost:" + PORT, "admin", "admin", targetDir, Duration.ofSeconds(3), 1, 2048, Duration.ofMillis(200), 3, 1000, java.util.List.of(), java.util.List.of(), 10_000_000, 10_000_000)) {
+        try (HttpArrowProducer sender = new HttpArrowProducer(schema, baseUrl, "admin", "admin", targetDir, Duration.ofSeconds(3), 1, 2048, Duration.ofMillis(200), 3, 1000, java.util.List.of(), java.util.List.of(), 10_000_000, 10_000_000)) {
             JsonToArrowConverter converter = new JsonToArrowConverter();
             LogTailToArrowProcessor processor = new LogTailToArrowProcessor(tempDir.toString(), "*.log", converter, sender, 100);
             processor.start();
